<resources>
    <string name="app_name">Textil Webshop</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="username">Felhasználónév</string>
    <string name="email">Email cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="buyer">Vásárló</string>
    <string name="seller">Eladó</string>
    <string name="into_cart">Kosárba</string>
    <string name="item_name">Termék neve</string>
    <string name="item_details">Termék leírás</string>
    <string name="logout">Kijelentkezés</string>
    <string name="confirm_logout">Kijelentkezés megerősítése</string>

    <string-array name="shopping_item_names">
        <item>Krepp textil</item>
        <item>Karton textil</item>
        <item>Frottír textil</item>
        <item>Düftin textil</item>
        <item>Flanell textil</item>
        <item>Molinó textil</item>
        <item>Muszlin textil</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>100% pamut. Különleges nyomási eljárással gyártott pamutszövet.</item>
        <item>Közepes finomságú fonalakból, vászonkötéssel szőtt, keményített, nyomott mintás pamutszövet.</item>
        <item>Pamutból készült, lágy, hurkos felületű szövet.</item>
        <item>Pamutból készült, bársonyos felületű vetülékatlasz szövet.</item>
        <item>100% pamut. Vászonkötésű, könnyű szövet, melynek mindkét oldala bolyhozott.</item>
        <item>100% pamut. Natúr hatású, számos célra használható anyag.</item>
        <item>100% PE. Nem gyűrődő, áttetsző, finom esésű, lágy anyag.</item>
    </string-array>

    <array name="shopping_item_images">
        <item>@drawable/textil</item>
        <item>@drawable/textil2</item>
        <item>@drawable/textil3</item>
        <item>@drawable/textil4</item>
        <item>@drawable/textil5</item>
        <item>@drawable/textil6</item>
        <item>@drawable/textil7</item>
    </array>

    <array name="shopping_item_price">
        <item>100 ft</item>
        <item>150 ft</item>
        <item>500 ft</item>
        <item>300 ft</item>
        <item>180 ft</item>
        <item>350 ft</item>
        <item>720 ft</item>
    </array>
</resources>